# ROS2-MazeSolver

./: README.md
template_ws/: Mapa.pgm  Mapa.yaml
template_ws/src/ros_gz_project_template/ros_gz_example_bringup/: CMakeLists.txt  package.xml
template_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/: mapper_params_online_async.yaml  nav2_params.yaml  slam_toolbox_config.yaml
template_ws/src/ros_gz_project_template/ros_gz_example_bringup/launch/: best_path.py  diff_drive.launch.py  lidar_subscriber.py
template_ws/src/ros_gz_project_template/ros_gz_example_description/models/diff_drive/: model.sdf
template_ws/src/ros_gz_project_template/ros_gz_example_gazebo/worlds/: diff_drive.sdf
