<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_example_bringup</name>
  <version>0.0.0</version>
  <description>Launch Files</description>
  <maintainer email="azulmartini@gmail.com">Azul Martini</maintainer>
  <maintainer email="mcnallytomas@gmail.com">Mc Nally Tomás</maintainer>
  <license>Apache 2.0</license>
  <author>Azul Martini</author>
  <author>Tomás Mc Nally</author>

  <depend>joint_state_publisher_gui</depend>

  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>ros_gz_example_description</depend>
  <depend>ros_gz_example_gazebo</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

